修正banner圖片無法延伸滿版問題
background-position: 50px 50px;（錯誤）
更正為background-position: 50% 50%;正確

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
 
 <!-- 以下id="header" 擺放網頁ＬＯＧＯ及naviation導覽列-->
-<div id="header">
+<header>
     <div class="container clearfix">
  	   <div id="logo">
- 	   	   <a href="#"><img src="http://placehold.it/170x108" alt="logo"></a>
+ 	   	   <a href="#">
+ 	   	   <img src="http://placehold.it/170x108" alt="logo">
+ 	   	   </a>
  	   </div>
  	   <nav>
  	     <ul class="clearfix">
@@ -29,7 +31,7 @@
  	     </ul>
  	   </nav>
     </div>	
-</div>	
+</header>	
 <section class="banner">
  <div class="intro-wrapper">
   		<div class="intro-text">Welcome to AC</div>
